# prime-generator-cpp

./: .gitignore  CMakeLists.txt  README.md  cmake.sh  gmp.sh  run.sh
src/: app.cpp  prime-generator.cpp  prime-generator.h
